--- a/beamer_sample.tex
+++ b/beamer_sample.tex
@@ -108,7 +108,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 	amet.
 \end{frame}
 %-------------------------------------------------------------
-\begin{frame}{}
+\begin{frame}{lorem ipsum}
 	\begin{thm}[lorem]
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
 		eirmod tempor invidunt ut labore et dolore magna aliquyam
